# TaskTracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Task.cpp  TaskManager.cpp  TaskManagerTests.cpp  TaskStorage.cpp  TestMain.cpp  main.cpp
.github/workflows/: ci.yml
include/: Task.h  TaskManager.h  TaskManagerTests.h  TaskStorage.h
